Update server web interface

--- a/apps/ebill_server/priv/browser/index.html
+++ b/apps/ebill_server/priv/browser/index.html
@@ -8,13 +8,16 @@
     <script src="/browser/js/lib/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="/browser/js/lib/highlight.pack.js"></script>
     <script src="/browser/js/lib/angular-highlightjs.min.js"></script>
+    <script src="/browser/js/lib/angular-animate.min.js"></script>
+    <script src="/browser/js/lib/abn_tree_directive.js"></script>
     <script src="/browser/js/app/app.js"></script>
     <script src="/browser/js/app/controllers.js"></script>
 
     <link href="/browser/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/browser/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link href="/browser/css/ebill.css" rel="stylesheet"/>
     <link href="/browser/css/highlight/github.css" rel="stylesheet"/>
+    <link href="/browser/css/abn_tree/abn_tree.css" rel="stylesheet"/>
+    <link href="/browser/css/ebill.css" rel="stylesheet"/>
   </head>
 
   <body>
