Update charging web interface

--- a/apps/ebill_server/priv/browser/index.html
+++ b/apps/ebill_server/priv/browser/index.html
@@ -10,6 +10,7 @@
     <script src="/browser/js/lib/angular-highlightjs.min.js"></script>
     <script src="/browser/js/lib/angular-animate.min.js"></script>
     <script src="/browser/js/lib/abn_tree_directive.js"></script>
+    <script src="/browser/js/app/gl-date.js"></script>
     <script src="/browser/js/app/app.js"></script>
     <script src="/browser/js/app/controllers.js"></script>
 
