--- a/apps/ebill_server/priv/browser/index.html
+++ b/apps/ebill_server/priv/browser/index.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             <li ng-class="{active: location.path() == '/templates'}"><a href="#/templates"><span class="glyphicon glyphicon-briefcase"></span> Templates</a></li>
             <li ng-class="{active: location.path() == '/charging'}"><a href="#/charging"><span class="glyphicon glyphicon-cloud"></span> Charging</a></li>
+            <li><a href="/db"><span class="glyphicon glyphicon-hdd"></span> Database</a></li>
             <li ng-class="{active: location.path() == '/help'}"><a href="#/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
             <li><a href="" ng-click="about()"><span class="glyphicon glyphicon-info-sign"></span> About</a></li>
           </ul>
