--- a/apps/ebill_server/priv/browser/index.html
+++ b/apps/ebill_server/priv/browser/index.html
@@ -37,6 +37,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li ng-class="{active: location.path() == '/templates'}"><a href="#/templates"><span class="glyphicon glyphicon-briefcase"></span> Templates</a></li>
+            <li ng-class="{active: location.path() == '/deploy'}"><a href="#/deploy"><span class="glyphicon glyphicon-repeat"></span> Deployment Cost</a></li>
             <li ng-class="{active: location.path() == '/charging'}"><a href="#/charging"><span class="glyphicon glyphicon-cloud"></span> Charging</a></li>
             <li><a href="/db"><span class="glyphicon glyphicon-hdd"></span> Database</a></li>
             <li ng-class="{active: location.path() == '/help'}"><a href="#/help"><span class="glyphicon glyphicon-question-sign"></span> Help</a></li>
